ポート番号を https://github.com/prometheus/prometheus/wiki/Default-port-allocations の末尾に設定し直し

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
         image: collelog/speedtest-exporter-alpine3.11
         networks:
             - default
-        ports:
-            - 9101
+        expose:
+            - 9683
         volumes:
             - /etc/localtime:/etc/localtime:ro
         labels:
