--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
     speedtest-exporter:
         build:
-            context: speedtest-exporter
+            context: .
         container_name: speedtest-exporter
         image: collelog/speedtest-exporter-alpine3.11
         networks:
